:sparkles: finalizacao validacoes
