# dist/swagger.json
@@ -158,7 +158,7 @@
 						"type": "string",
 						"format": "date-time"
 					},
-					"dateDevolucao": {
+					"dataDevolucao": {
 						"type": "string",
 						"format": "date-time"
 					}
@@ -167,7 +167,7 @@
 					"livroId",
 					"usuarioId",
 					"dataEmprestimo",
-					"dateDevolucao"
+					"dataDevolucao"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -190,7 +190,7 @@
 						"type": "string",
 						"format": "date-time"
 					},
-					"dateDevolucao": {
+					"dataDevolucao": {
 						"type": "string",
 						"format": "date-time"
 					}
@@ -200,7 +200,7 @@
 					"livroId",
 					"usuarioId",
 					"dataEmprestimo",
-					"dateDevolucao"
+					"dataDevolucao"
 				],
 				"type": "object",
 				"additionalProperties": false
