# src/model/dto/EmprestimoDto.ts
@@ -3,13 +3,13 @@ export class EmprestimoDto {
     livroId: number;
     usuarioId: number;
     dataEmprestimo: Date;
-    dateDevolucao: Date;
+    dataDevolucao: Date;
 
     constructor(id: any, livroId: any, usuarioId: any, dataEmprestimo: any, dataDevolucao: any) {
         this.id = id;
         this.livroId = livroId;
         this.usuarioId = usuarioId;
         this.dataEmprestimo = dataEmprestimo;
-        this.dateDevolucao = dataDevolucao;
+        this.dataDevolucao = dataDevolucao;
     }
 }   
