# src/model/dto/EmprestimoRequestDto.ts
@@ -2,12 +2,12 @@ export class EmprestimoRequestDto {
     livroId: number;
     usuarioId: number;
     dataEmprestimo: Date;
-    dateDevolucao: Date;
+    dataDevolucao: Date;
 
     constructor(livroId?: number, usuarioId?: number, dataEmprestimo?: Date, dataDevolucao?: Date) {
         this.livroId = livroId || 0;
         this.usuarioId = usuarioId || 0;
         this.dataEmprestimo = dataEmprestimo || new Date;
-        this.dateDevolucao = dataDevolucao || new Date;
+        this.dataDevolucao = dataDevolucao || new Date;
     }
 }   
