# src/route/routes.ts
@@ -93,7 +93,7 @@ const models: TsoaRoute.Models = {
             "livroId": {"dataType":"double","required":true},
             "usuarioId": {"dataType":"double","required":true},
             "dataEmprestimo": {"dataType":"datetime","required":true},
-            "dateDevolucao": {"dataType":"datetime","required":true},
+            "dataDevolucao": {"dataType":"datetime","required":true},
         },
         "additionalProperties": false,
     },
@@ -105,7 +105,7 @@ const models: TsoaRoute.Models = {
             "livroId": {"dataType":"double","required":true},
             "usuarioId": {"dataType":"double","required":true},
             "dataEmprestimo": {"dataType":"datetime","required":true},
-            "dateDevolucao": {"dataType":"datetime","required":true},
+            "dataDevolucao": {"dataType":"datetime","required":true},
         },
         "additionalProperties": false,
     },
